# bosco

./: .coverage  .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  coverage.json  devenv.nix  poetry.toml  pyproject.toml
.devenv/: devenv.json  flake.json  profile
.devenv/gc/: shell-1-link  shell-2-link
.github/: CONTRIBUTING.md  issue_template.md  pull_request_template.md
.github/workflows/: build.yml  publish.yml
bosco/: README.md  benchmark.py  constants.py  generate.py  main.py
bosco/list-processing/: basics.py  other.py  search.py  sorting.py
bosco/list_processing/: basics.py  combination.py  other.py  search.py  sorting.py
bosco/sorting/: search.py  sorting.py
tests/: test_basics.py  test_benchmark.py  test_constants.py  test_generate.py  test_sorting.py
